// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-tabs ant-tabs-top ant-tabs-line">
    <div role="tablist" tabIndex="0" class="ant-tabs-bar">
      <div class="ant-tabs-extra-content" style="float:right;"></div>
      <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
        <div
          class="ant-tabs-nav-wrap">
          <div class="ant-tabs-nav-scroll">
            <div class="ant-tabs-nav ant-tabs-nav-animated">
              <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
              <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 2</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
            </div>
          </div>
      </div>
    </div>
  </div>
  <div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:0%;">
    <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Content of Tab Pane 1</div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive">Content of Tab Pane 2</div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  </div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation">
  <div role="tablist" tabIndex="0" class="ant-tabs-bar">
    <div class="ant-tabs-extra-content" style="float:right;"></div>
    <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
      <div
        class="ant-tabs-nav-wrap">
        <div class="ant-tabs-nav-scroll">
          <div class="ant-tabs-nav ant-tabs-nav-animated">
            <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
            <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 2</div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
          </div>
        </div>
    </div>
  </div>
</div>
<div class="ant-tabs-content ant-tabs-content-no-animated">
  <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Content of Tab Pane 1</div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div class="card-container">
  <div class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation">
    <div role="tablist" tabIndex="0" class="ant-tabs-bar">
      <div class="ant-tabs-extra-content" style="float:right;"></div>
      <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
        <div
          class="ant-tabs-nav-wrap">
          <div class="ant-tabs-nav-scroll">
            <div class="ant-tabs-nav ant-tabs-nav-animated">
              <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
              <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab Title 1</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab Title 2</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab Title 3</div>
            </div>
          </div>
      </div>
    </div>
  </div>
  <div class="ant-tabs-content ant-tabs-content-no-animated">
    <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">
      <p>Content of Tab Pane 1</p>
      <p>Content of Tab Pane 1</p>
      <p>Content of Tab Pane 1</p>
    </div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  </div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div style="margin-bottom:16px;">
    <button type="button" class="ant-btn ant-btn-default"><span>ADD</span></button>
  </div>
  <div class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation">
    <div role="tablist" tabIndex="0" class="ant-tabs-bar">
      <div class="ant-tabs-extra-content" style="float:right;"></div>
      <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
        <div
          class="ant-tabs-nav-wrap">
          <div class="ant-tabs-nav-scroll">
            <div class="ant-tabs-nav ant-tabs-nav-animated">
              <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
              <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">
                <div>Tab 1
                  <i class="anticon anticon-close"></i>
                </div>
              </div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">
                <div>Tab 2
                  <i class="anticon anticon-close"></i>
                </div>
              </div>
            </div>
          </div>
      </div>
    </div>
  </div>
  <div class="ant-tabs-content ant-tabs-content-no-animated">
    <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">
      Content of Tab 1
    </div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  </div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div class="ant-tabs ant-tabs-top ant-tabs-line">
  <div role="tablist" tabIndex="0" class="ant-tabs-bar">
    <div class="ant-tabs-extra-content" style="float:right;"></div>
    <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
      <div
        class="ant-tabs-nav-wrap">
        <div class="ant-tabs-nav-scroll">
          <div class="ant-tabs-nav ant-tabs-nav-animated">
            <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
            <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
            <div role="tab" aria-disabled="true" aria-selected="false" class=" ant-tabs-tab ant-tabs-tab-disabled" style="margin-right:undefinedpx;">Tab 2</div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
          </div>
        </div>
    </div>
  </div>
</div>
<div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:0%;">
  <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Tab 1</div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation">
  <div role="tablist" tabIndex="0" class="ant-tabs-bar">
    <div class="ant-tabs-extra-content" style="float:right;"><span><i class="anticon anticon-plus ant-tabs-new-tab"></i></span></div>
    <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
      <div
        class="ant-tabs-nav-wrap">
        <div class="ant-tabs-nav-scroll">
          <div class="ant-tabs-nav ant-tabs-nav-animated">
            <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
            <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">
              <div class="ant-tabs-tab-unclosable">Tab 1</div>
            </div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">
              <div>Tab 2
                <i class="anticon anticon-close"></i>
              </div>
            </div>
          </div>
        </div>
    </div>
  </div>
</div>
<div class="ant-tabs-content ant-tabs-content-no-animated">
  <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">
    Content of Tab 1
  </div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
<div class="ant-tabs ant-tabs-top ant-tabs-line">
  <div role="tablist" tabIndex="0" class="ant-tabs-bar">
    <div class="ant-tabs-extra-content" style="float:right;">
      <button type="button" class="ant-btn ant-btn-default"><span>Extra Action</span></button>
    </div>
    <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
      <div
        class="ant-tabs-nav-wrap">
        <div class="ant-tabs-nav-scroll">
          <div class="ant-tabs-nav ant-tabs-nav-animated">
            <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
            <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 2</div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
          </div>
        </div>
    </div>
  </div>
</div>
<div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:0%;">
  <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Content of tab 1</div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div class="ant-tabs ant-tabs-top ant-tabs-line">
  <div role="tablist" tabIndex="0" class="ant-tabs-bar">
    <div class="ant-tabs-extra-content" style="float:right;"></div>
    <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
      <div
        class="ant-tabs-nav-wrap">
        <div class="ant-tabs-nav-scroll">
          <div class="ant-tabs-nav ant-tabs-nav-animated">
            <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
            <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;"><span slot="tab"><i class="anticon anticon-apple"></i>
      Tab 1
    </span></div>
            <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;"><span slot="tab"><i class="anticon anticon-android"></i>
      Tab 2
    </span></div>
          </div>
        </div>
    </div>
  </div>
</div>
<div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:-100%;">
  <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">
    Tab 2
  </div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div style="width:500px;">
  <div class="ant-radio-group ant-radio-group-default" style="margin:8px;">
    <label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><span class="ant-radio-button ant-radio-button-checked"><input type="radio" checked="checked" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>top</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>bottom</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>left</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>right</span></label>
  </div>
  <div class="ant-tabs ant-tabs-top ant-tabs-line">
    <div role="tablist" tabIndex="0" class="ant-tabs-bar">
      <div class="ant-tabs-extra-content" style="float:right;"></div>
      <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
        <div
          class="ant-tabs-nav-wrap">
          <div class="ant-tabs-nav-scroll">
            <div class="ant-tabs-nav ant-tabs-nav-animated">
              <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
              <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 2</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
            </div>
          </div>
      </div>
    </div>
  </div>
  <div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:0%;">
    <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Content of Tab 1</div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  </div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div class="ant-radio-group ant-radio-group-default" style="margin-bottom:16px;">
    <label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><span class="ant-radio-button ant-radio-button-checked"><input type="radio" checked="checked" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Small</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Default</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Large</span></label>
  </div>
  <div class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-line">
    <div role="tablist" tabIndex="0" class="ant-tabs-bar">
      <div class="ant-tabs-extra-content" style="float:right;"></div>
      <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
        <div
          class="ant-tabs-nav-wrap">
          <div class="ant-tabs-nav-scroll">
            <div class="ant-tabs-nav ant-tabs-nav-animated">
              <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
              <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 2</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
            </div>
          </div>
      </div>
    </div>
  </div>
  <div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:-100%;">
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Content of tab 2</div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  </div>
</div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div style="width:500px;">
  <div class="ant-radio-group ant-radio-group-default" style="margin-bottom:8px;">
    <label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><span class="ant-radio-button ant-radio-button-checked"><input type="radio" checked="checked" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Horizontal</span></label>
    <label class="ant-radio-button-wrapper"><span class="ant-radio-button"><input type="radio" class="ant-radio-button-input"><span class="ant-radio-button-inner"></span></span><span>Vertical</span></label>
  </div>
  <div class="ant-tabs ant-tabs-top ant-tabs-line" style="height:200px;">
    <div role="tablist" tabIndex="0" class="ant-tabs-bar">
      <div class="ant-tabs-extra-content" style="float:right;"></div>
      <div class="ant-tabs-nav-container"><span unselectable="unselectable" class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-prev-icon"></span></span><span unselectable="unselectable" class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"><span class="ant-tabs-tab-next-icon"></span></span>
        <div
          class="ant-tabs-nav-wrap">
          <div class="ant-tabs-nav-scroll">
            <div class="ant-tabs-nav ant-tabs-nav-animated">
              <div class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"></div>
              <div role="tab" aria-disabled="false" aria-selected="true" class="ant-tabs-tab-active ant-tabs-tab" style="margin-right:undefinedpx;">Tab 1</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 2</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 3</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 4</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 5</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 6</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 7</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 8</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 9</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 10</div>
              <div role="tab" aria-disabled="false" aria-selected="false" class=" ant-tabs-tab" style="margin-right:undefinedpx;">Tab 11</div>
            </div>
          </div>
      </div>
    </div>
  </div>
  <div class="ant-tabs-content ant-tabs-content-animated" style="margin-left:0%;">
    <div role="tabpanel" aria-hidden="false" class="ant-tabs-tabpane ant-tabs-tabpane-active">Content of tab 1</div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
    <div role="tabpanel" aria-hidden="true" class="ant-tabs-tabpane ant-tabs-tabpane-inactive"></div>
  </div>
</div>
</div>
`;
